Return public keys for BLS and SECP
