# core/src/main/resources/openapi/eth2signer.yaml
@@ -57,13 +57,23 @@ paths:
         '500':
           description: 'Internal Eth2Signer server error'
 
-  /signer/publicKeys:
+  /signer/publicKeys/{keyType}:
     get:
       tags:
         - 'Public Key'
       summary: 'List of available Public Keys'
       description: 'Returns the public keys for the private keys that have been loaded into Eth2Signer'
       operationId: 'getPublicKeys'
+      parameters:
+        - name: 'keyType'
+          in: 'path'
+          required: false
+          description: 'Key for which data to sign'
+          schema:
+            type: string
+            enum:
+              - BLS
+              - SECP256K1
       responses:
         '200':
           description: 'list of public keys'
@@ -75,6 +85,7 @@ paths:
                   type: string
         '500':
           description: 'Internal Eth2Signer server error'
+
   /upcheck:
     get:
       tags:
